--- a/algo/cdcl.tex
+++ b/algo/cdcl.tex
@@ -1,4 +1,4 @@
-\begin{algorithm}
+\begin{algorithm}[!htbp]
 	\SetKwProg{Fn}{function}{}{}
 	\SetKwFunction{CDCL}{CDCL}
 	\SetKwFunction{unitPropagation}{unitPropagation}
@@ -37,5 +37,4 @@
 	}
 	\caption{The CDCL algorithm.}
 	\label{algo:cdcl}
-	
 \end{algorithm}
