--- a/main.bib
+++ b/main.bib
@@ -49,6 +49,19 @@
 
 % SAT heuristics
 
+% 2-SAT
+
+@article{aspvall1979linear,
+	title={A linear-time algorithm for testing the truth of certain quantified boolean formulas},
+	author={Aspvall, Bengt and Plass, Michael F and Tarjan, Robert Endre},
+	journal={Information Processing Letters},
+	volume={8},
+	number={3},
+	pages={121--123},
+	year={1979},
+	publisher={Elsevier}
+}
+
 % 1 UIP
 @inproceedings{zhang2001efficient,
 	title={Efficient conflict driven learning in a boolean satisfiability solver},
