--- a/main.tex
+++ b/main.tex
@@ -37,7 +37,10 @@
 
 \definecolor{hgreen}{RGB}{0,153,20}%{rgb}{0, 0.8, 0.2}
 
-
+\setlength{\intextsep}{10pt} % Vertical space above & below [h] floats
+\setlength{\textfloatsep}{10pt} % Vertical space below (above) [t] ([b]) floats
+\setlength{\abovecaptionskip}{10pt}
+\setlength{\belowcaptionskip}{5pt}
 
 \newcommand{\cred}[1]{{\color{purple}#1}}
 \newcommand{\cgreen}[1]{{\color{hgreen}#1}}
