--- a/algo/dpll.tex
+++ b/algo/dpll.tex
@@ -1,4 +1,4 @@
-\begin{algorithm}
+\begin{algorithm}[!htbp]
 	\SetKwProg{Fn}{function}{}{}
 	\SetKwFunction{DPLL}{DPLL}	
 	\SetKwFunction{unitPropagation}{unitPropagation}
