--- a/algo/unitdpll.tex
+++ b/algo/unitdpll.tex
@@ -1,4 +1,4 @@
-\begin{algorithm}
+\begin{algorithm}[!htbp]
 	\SetKwProg{Fn}{function}{}{}
 	\SetKwFunction{unitPropagation}{unitPropagation}
 	\Fn{
