--- a/main.bib
+++ b/main.bib
@@ -114,6 +114,15 @@
 
 % == Simplification
 
+@inproceedings{sorensson2009minimizing,
+	title={Minimizing learned clauses},
+	author={S{\"o}rensson, Niklas and Biere, Armin},
+	booktitle={International Conference on Theory and Applications of Satisfiability Testing},
+	pages={237--243},
+	year={2009},
+	organization={Springer}
+}
+
 % SAtelite
 @inproceedings{een2005effective,
 	title={Effective preprocessing in SAT through variable and clause elimination},
