--- a/main.bib
+++ b/main.bib
@@ -295,9 +295,14 @@
 }
 
 % Lex leader
+
+% generation sbp
 @article{crawford1996symmetry,
 	title={Symmetry-breaking predicates for search problems},
-	author={Crawford, James and Ginsberg, Matthew},
+	author={Crawford, James and Ginsberg, Matthew and Luks, Eugene and Roy, Amitabha},
+	journal={KR},
+	volume={96},
+	pages={148--159},
 	year={1996}
 }
 
